@@ -1,4 +1,4 @@
 plugin.video.virginradio.it
 ==================
 
-Kodi unofficial plugin for Virgin Radio Italia (tested on Kodi 15.1 Isengard).
+Kodi unofficial plugin for Virgin Radio Italia (tested on Kodi 15.2 Isengard).
